fixed flex wrap for small screens on release accelerator

--- a/src/apps/content-editor/src/app/views/ItemEdit/Content/Actions/Widgets/Release/Release.less
+++ b/src/apps/content-editor/src/app/views/ItemEdit/Content/Actions/Widgets/Release/Release.less
@@ -6,9 +6,11 @@
     display: flex;
     flex-direction: column;
     .ReleaseWrap {
+      flex-wrap: wrap;
       display: flex;
       & > div {
         flex: 1;
+        margin-right: 8px;
       }
     }
   }
@@ -18,7 +20,6 @@
   .Add {
     align-self: end;
     margin-top: 8px;
-    margin-left: 8px;
   }
   .VersionRelease {
     margin-top: 8px;
